--- a/src/components/AutocompleteSearch/AutocompleteSearch.css
+++ b/src/components/AutocompleteSearch/AutocompleteSearch.css
@@ -2,13 +2,14 @@
   display: flex;
   flex-direction: column;
   margin: auto;
-  width: 20.125rem;
-  padding: 1rem;
+  max-width: 20.125rem;
+  padding: 1rem 0;
   padding-bottom: 0;
 }
 
 .c-autocomplete__input {
   border: 1px solid #ccc;
+  max-width: 20rem;
   border-radius: 0.3rem;
   padding: 0.5rem 0.75rem;
 }
@@ -23,32 +24,8 @@
   border-bottom-right-radius: 0;
 }
 
-.c-autocomplete__list {
-  border: 1px solid #ccc;
-  border-top: none;
-  border-bottom: none;
-  display: flex;
-  flex-direction: column;
-  margin: auto;
-  width: 20rem;
-  max-height: 8.85rem;
-  overflow-y: scroll;
-}
-
-.c-autocomplete__list-item {
-  border: none;
-  cursor: pointer;
-  padding: 0.4rem;
-  border-bottom: 1px solid #ccc;
-  background-color: #fff;
-}
-
-.c-autocomplete__list-item:hover {
-  background-color: #eee;
-}
-
 .c-autocomplete__list-item-count {
-  width: 20rem;
+  max-width: 20rem;
   border: 1px solid #ccc;
   border-top: none;
   border-bottom-left-radius: 0.3rem;
@@ -56,4 +33,10 @@
   background-color: #ccc;
   font-weight: 600;
   margin: auto;
+}
+
+.c-autocomplete__message {
+  border: none;
+  padding: 0.3rem;
+  border-bottom: 1px solid #ccc;
 }
